<resources>
    <string name="app_name">RouterConfig</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blokuj">Blokuj</string>
    <string name="odblokuj">Odblokuj</string>
    <string name="automaticke">Automatické blokovanie</string>
    <string name="automaticke_stop">Stop automatické blokovanie</string>
    <string name="vysledok">Výsledok</string>
    <string name="aktualnyStav">Aktuálny stav: </string>
    <string name="zakazanePre">Zakázané pre:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="on">On</string>
    <string name="of">Off</string>
    <string name="label_url_hint">napr. http://192.168.1.1/</string>
    <string name="label_url_routra">Adresa routra:</string>
    <string name="label_mcadres_hint">napr. 00:00:00:00:00:00</string>
    <string name="label_mcadres_katka">Adresa Katky:</string>
    <string name="label_password">Heslo:</string>
    <string name="label_login">Login:</string>
    <string name="label_ssid">Názov wifi:</string>
    <string name="ssid_hint">tplnk</string>
    <string name="save">Ulož</string>
    <string name="errorInvalidRouterUrl">Zadaná adresa routra nie je validná.</string>
    <string name="errorInvalidLogin">Zadaný login nie je validný.</string>
    <string name="errorInvalidPassword">Zadané heslo nie je validné.</string>
    <string name="errorInvalidMacAdress">Adresa Katky nie je validná.</string>
    <string name="errorInvalidSSID">Názov wifi siete nie je validný.</string>
    <string name="wifi_settings">Blokovanie WiFi</string>
    <string name="wifi_block_unavailable">Aktuálny stav nie je dostupný</string>
    <string name="wifi_block_activated">Blokovanie je zapnuté</string>
    <string name="wifi_block_deactivated">Blokovanie je vypnuté</string>
    <string name="process_invalid_wifi">Modelovanie requestu</string>
</resources>
