<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="sk.xanion.routerconfig.fragment.SetupWirelessFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnBlokuj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonPressed"
            android:text="@string/blokuj" />

        <Button
            android:id="@+id/btnOdblokuj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonPressed"
            android:text="@string/odblokuj" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="" />

        <TextView
            android:id="@+id/tvAktualnyStav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_wifi_block_unavailable"
            android:gravity="start|center_vertical"
            android:text="@string/wifi_block_unavailable" />

        <ListView
            android:id="@+id/lvMacAdreses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</FrameLayout>
